--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@eslint/js": "^9.13.0",
     "eslint": "^9.13.0",
     "eslint-config-dicodingacademy": "^0.9.4",
-    "globals": "^15.11.0"
+    "globals": "^15.11.0",
+    "nodemon": "^3.1.7"
   }
 }
