--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "books-app-back-end",
   "version": "1.0.0",
   "description": "REST API for Books Apps",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "REST API",
+    "Bookshelf API"
+  ],
+  "author": "irul huda",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.12",
