--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST API for Books Apps",
   "main": "src/server.js",
   "scripts": {
-    "start": "NODE_ENV=production node ./src/server.js",
+    "start": "node ./src/server.js",
     "start:dev": "nodemon ./src/server.js"
   },
   "keywords": [
